2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/bouncers/icalbouncer.py (IcalBouncer.do_setup,
	  IcalBouncer.do_authenticate):
	Port ical bouncer to new scheduling code.

	* flumotion/component/consumers/disker/disker.py
	  (Disker.configure_pipeline):
	Fix typo.
2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py
	  (Disker._notify_caps_cb, Disker.configure_pipeline,
	  Disker.eventStarted, Disker.eventStopped):
	Port of disker to new scheduling code.

2007-05-30  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Two serious bugs fixed: connected-clients in the uiState should be 
	  the number of clients currently connected, so don't try to put the
	  entire connected_clients list in there.
	  Don't use the wrong (non-existing) variable for the number of bytes
	  written for a running connection.

2007-05-30  Michael Smith <msmith@fluendo.com>

	* flumotion/worker/feedserver.py:
	  Thanks to Andy for pointing out that I forgot to actually commit the
	  change here:
	  Change to calling loseConnection() to drop the connection, since the
	  lambda trick only works with the selectreactor (not gtk2reactor).

2007-05-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py (Switch.init,
	  Switch.cb, Switch.is_active, Switch.eventStarted,
	  Switch.eventStopped, AVSwitch.switch_to, AVSwitch._block_cb,
	  AVSwitch._block_switch_sink_pads):
	* flumotion/component/combiners/switch/switch.xml:
	Remove the code that waits for pad blocks to actually get called
	back, was unnecessary and cannot work for cases where no data
	gets transferred over some sink pads.
	Add ical scheduling code, with some FIXMEs for later.

2007-05-29  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/scheduler.py (ICalScheduler.__init__):
	Actually start the watcher.
